@@ -874,24 +874,23 @@ if (isActionAccessible($guid, $connection2, '/modules/Students/applicationForm_m
         for ($i = 0; $i < count($requiredDocumentsList); $i++) {
 
             $dataFile = array('gibbonApplicationFormID' => $gibbonApplicationFormID, 'name' => $requiredDocumentsList[$i]);
-            $sqlFile = 'SELECT path FROM gibbonApplicationFormFile WHERE gibbonApplicationFormID=:gibbonApplicationFormID AND name=:name ORDER BY gibbonApplicationFormFileID DESC';
+            $sqlFile = "SELECT CONCAT('attachment[', gibbonApplicationFormFileID, ']') as id, path FROM gibbonApplicationFormFile WHERE gibbonApplicationFormID=:gibbonApplicationFormID AND name=:name ORDER BY gibbonApplicationFormFileID DESC";
             $resultFile = $pdo->executeQuery($dataFile, $sqlFile);
+
+            $attachments = ($resultFile && $resultFile->rowCount() > 0)? $resultFile->fetchAll(\PDO::FETCH_KEY_PAIR) : array();
 
             $form->addHiddenValue('fileName'.$i, $requiredDocumentsList[$i]);
 
-            $attachment = ($resultFile->rowCount() > 0)? $resultFile->fetchColumn(0) : '';
-            $description = ($resultFile->rowCount() > 0)? __('Will overwrite existing attachment.') : '';
-
             $row = $form->addRow();
-            $row->addLabel('file'.$i, $requiredDocumentsList[$i])->description($description);
+            $row->addLabel('file'.$i, $requiredDocumentsList[$i]);
                 $row->addFileUpload('file'.$i)
                     ->accepts($fileUploader->getFileExtensions())
+                    ->setAttachments($_SESSION[$guid]['absoluteURL'], $attachments)
                     ->setRequired($requiredDocumentsCompulsory == 'Y')
-                    ->setAttachment('attachment'.$i, $_SESSION[$guid]['absoluteURL'], $attachment)
-                    ->canDelete(false);
+                    ->uploadMultiple(true)
+                    ->canDelete(true);
         }
 
-        $row = $form->addRow()->addContent(getMaxUpload($guid));
         $form->addHiddenValue('fileCount', count($requiredDocumentsList));
     }
 
